# Rust_Exploration

./: .gitignore  Log.md  README.md
01_linkedIn_course/01_Rust_Essential_Training/01_hello_world/: main.rs
01_linkedIn_course/01_Rust_Essential_Training/ex/: Cargo.toml
01_linkedIn_course/01_Rust_Essential_Training/ex/src/: main.rs
01_linkedIn_course/01_Rust_Essential_Training/ex_03/: Cargo.toml
01_linkedIn_course/01_Rust_Essential_Training/ex_03/src/: main.rs
01_linkedIn_course/01_Rust_Essential_Training/ex_04/: Cargo.toml
01_linkedIn_course/01_Rust_Essential_Training/ex_04/src/: main.rs
02_youtube/01_creativcoder/clinews/: Cargo.toml
02_youtube/01_creativcoder/clinews/newsapi/: Cargo.toml
02_youtube/01_creativcoder/clinews/newsapi/src/: lib.rs
02_youtube/01_creativcoder/clinews/src/: main.rs
02_youtube/02_todo/: README.md
02_youtube/02_todo/backend/: Cargo.toml
02_youtube/02_todo/backend/src/: main.rs
02_youtube/02_todo/frontend/: package.json
03_book/guessing_game/src/: main.rs
the_book_projects/hello_world/: main
